<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_start_stop"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="30"
        android:title="@string/button_search_start"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/search_send_report"
        android:icon="?attr/actionModeShareDrawable"
        android:orderInCategory="20"
        android:title="@string/search_send_report"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/search_cancel_check_devices"
        android:icon="@drawable/ic_cancel_select"
        android:orderInCategory="10"
        android:title="@string/search_cancel_selection"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>
