<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <EditText
        android:id="@+id/search_filter_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/search_filter_string"
        android:inputType="text|textNoSuggestions"
        tools:ignore="Autofill" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/search_filter_radio_group_name"
            android:textAlignment="textEnd"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/search_filter_rssi_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ems="2"
            android:textAlignment="textStart"
            android:textSize="18sp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/search_filter_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/search_filter_radio_button_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:hint="@string/radio_button_none" />

        <RadioButton
            android:id="@+id/search_filter_radio_button_only"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/radio_button_only" />

        <RadioButton
            android:id="@+id/search_filter_radio_button_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/radio_button_or" />

        <RadioButton
            android:id="@+id/search_filter_radio_button_and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/radio_button_and" />
    </RadioGroup>

    <SeekBar
        android:id="@+id/search_filter_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="107" />
</LinearLayout>